syntax = "proto3";
option java_multiple_files = true;
package com.example.senderservice.grpc;
option java_package = "";

message ReceiveRequest {
  string transactionId = 1;
  string accountId = 2;
  string transferId = 3;
  int64 creditAmount = 4;
}

message ReceiveResponse {
  string result = 1;
}

service ReceiveService {
  rpc credit(ReceiveRequest) returns (ReceiveResponse);
}
